--- a/JSBasic/源码/day10/source/day10/11.this.html
+++ b/JSBasic/源码/day10/source/day10/11.this.html
@@ -38,7 +38,7 @@
 
 
 			//以函数形式调用，this是window    this.name  ===>  window.name
-			fun();
+			fun();    //全局的name属性   this就是window
 			
 			//以方法的形式调用，this是调用方法的对象
 			obj.sayName();
