--- a/JSAdvance/JSAdvance/work/01_基础总结深入/03_对象2.html
+++ b/JSAdvance/JSAdvance/work/01_基础总结深入/03_对象2.html
@@ -12,7 +12,7 @@
 -->
 <script type="text/javascript">
   var p = {}
-  //1. 给p对象添加一个属性: content type: text/json
+  //1. 给p对象添加一个属性: content-type: text/json
   // p.content-type = 'text/json' //不能用
   p['content-type'] = 'text/json'
   console.log(p['content-type'])
@@ -21,7 +21,7 @@
   var propName = 'myAge'
   var value = 18
   // p.propName = value //不能用
-  p[propName] = value
+  p[propName] = value           //propName是一个字符串
   console.log(p[propName])
 
 
