--- a/JSAdvance/JSAdvance/work/01_基础总结深入/04_函数.html
+++ b/JSAdvance/JSAdvance/work/01_基础总结深入/04_函数.html
@@ -13,13 +13,13 @@
   * 提高代码复用
   * 便于阅读交流
 3. 如何定义函数?
-  * 函数声明
-  * 表达式
+  * 函数声明  function(){}
+  * 表达式 var x = function(){}
 4. 如何调用(执行)函数?
   * test(): 直接调用
   * obj.test(): 通过对象调用
   * new test(): new调用
-  * test.call/apply(obj): 临时让test成为obj的方法进行调用
+  * test.call/apply(obj): 相当于obj.test() 临时让test成为obj的方法进行调用   本来obj中没有test这个方法
 -->
 <script type="text/javascript">
   /*
@@ -64,11 +64,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
