--- a/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/01_原型(prototype).html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/01_原型(prototype).html
@@ -15,20 +15,22 @@
 <script type="text/javascript">
 
   // 每个函数都有一个prototype属性, 它默认指向一个Object空对象(即称为: 原型对象)
-  console.log(Date.prototype, typeof Date.prototype)
+  // 原型上的方法是给实例对象使用的
+  console.log(Date.prototype, typeof Date.prototype)  // object
   function Fun () {//alt + shift +r(重命名rename)
 
   }
   console.log(Fun.prototype)  // 默认指向一个Object空对象(没有我们的属性)
 
-  // 原型对象中有一个属性constructor, 它指向函数对象
-  console.log(Date.prototype.constructor===Date)
-  console.log(Fun.prototype.constructor===Fun)
+  // 原型对象中有一个属性constructor(引用变量属性), 它指向函数对象
+  console.log(Date.prototype.constructor===Date)   //true
+  console.log(Fun.prototype.constructor===Fun)    //true
 
   //给原型对象添加属性(一般是方法) ===>实例对象可以访问
   Fun.prototype.test = function () {
     console.log('test()')
   }
+  //原型方法给实例对象使用
   var fun = new Fun()
   fun.test()
 
