--- a/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/02_显式原型与隐式原型.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/02_显式原型与隐式原型.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!--
-1. 每个函数function都有一个prototype，即显式原型(属性)
+1. 每个函数function都有一个prototype，即显式原型(显示原型属性)
 2. 每个实例对象都有一个__proto__，可称为隐式原型(属性)
 3. 对象的隐式原型的值为其对应构造函数的显式原型的值
 4. 内存结构(图)
@@ -16,12 +16,15 @@
   * 程序员能直接操作显式原型, 但不能直接操作隐式原型(ES6之前)
 -->
 <script type="text/javascript">
+
+  //  引用保存的都是地址值
+
   //定义构造函数
   function Fn() {   // 内部语句: this.prototype = {}
 
   }
   // 1. 每个函数function都有一个prototype，即显式原型属性, 默认指向一个空的Object对象
-  console.log(Fn.prototype)
+  console.log(Fn.prototype)    //地址指向原型对象
   // 2. 每个实例对象都有一个__proto__，可称为隐式原型
   //创建实例对象
   var fn = new Fn()  // 内部语句: this.__proto__ = Fn.prototype
