--- a/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/03_原型链.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/01_原型与原型链/03_原型链.html
@@ -11,10 +11,12 @@
     * 先在自身属性中查找，找到返回
     * 如果没有, 再沿着__proto__这条链向上查找, 找到返回
     * 如果最终没找到, 返回undefined
-  * 别名: 隐式原型链
+  * 别名: 隐式原型链   按照__proto__向上寻找
   * 作用: 查找对象的属性(方法)
 2. 构造函数/原型/实体对象的关系(图解)
 3. 构造函数/原型/实体对象的关系2(图解)
+
+实例对象的隐式原型属性等于 构造函数的显示原型属性
 -->
 <script type="text/javascript">
   // console.log(Object)
@@ -35,7 +37,7 @@
   fn.test1()
   fn.test2()
   console.log(fn.toString())
-  console.log(fn.test3)
+  console.log(fn.test3)       //找不到test3 undefined is not a function
   // fn.test3()
 
 
