--- a/JSBasic/源码/day13/source/day13/05.DOM.html
+++ b/JSBasic/源码/day13/source/day13/05.DOM.html
@@ -9,13 +9,16 @@
 		<script type="text/javascript">
 			
 			/*
-			 * 浏览器已经为我们提供 文档节点 对象这个对象是window属性
+			 * 浏览器已经为我们提供 文档节点( document ) 对象这个对象是window属性
 			 * 	可以在页面中直接使用，文档节点代表的是整个网页
 			 */
-			//console.log(document);
+			console.log(document);
 			
 			//获取到button对象
 			var btn = document.getElementById("btn");
+			console.log(btn)
+
+			console.log(btn.innerHTML)
 			
 			//修改按钮的文字
 			btn.innerHTML = "I'm Button";
