--- a/JSBasic/源码/day13/source/day13/06.事件.html
+++ b/JSBasic/源码/day13/source/day13/06.事件.html
@@ -6,10 +6,11 @@
 	</head>
 	<body>
 		<!--
+			处理事件:
 			我们可以在事件对应的属性中设置一些js代码，
 				这样当事件被触发时，这些代码将会执行
 				
-			这种写法我们称为结构和行为耦合，不方便维护，不推荐使用	
+			这种写法我们称为  结构和行为耦合  ，不方便维护，不推荐使用	
 		-->
 		<!--<button id="btn" onmousemove="alert('讨厌，你点我干嘛！');">我是一个按钮</button>-->
 		<button id="btn">我是一个按钮</button>
@@ -19,8 +20,6 @@
 			 * 事件，就是用户和浏览器之间的交互行为，
 			 * 	比如：点击按钮，鼠标移动、关闭窗口。。。
 			 */
-			
-			
 			
 			//获取按钮对象
 			var btn = document.getElementById("btn");
