--- a/JSBasic/源码/day13/source/day13/07.文档的加载.html
+++ b/JSBasic/源码/day13/source/day13/07.文档的加载.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<script type="text/javascript">
+
+			//整个页面加载完成再执行  window.onload   先加载但是没有执行，等待document加载完成
 			/*
 			 * 浏览器在加载一个页面时，是按照自上向下的顺序加载的，
 			 * 	读取到一行就运行一行,如果将script标签写到页面的上边，
