--- a/JSBasic/源码/day15/source/day15/04.使用DOM操作CSS.html
+++ b/JSBasic/源码/day15/source/day15/04.使用DOM操作CSS.html
@@ -36,7 +36,7 @@
 					 * 		需要将这种样式名修改为驼峰命名法，
 					 * 		去掉-，然后将-后的字母大写
 					 * 
-					 * 我们通过style属性设置的样式都是内联样式，
+					 * 我们通过style属性设置的样式都是 【【【【内联样式】】】】，
 					 * 	而内联样式有较高的优先级，所以通过JS修改的样式往往会立即显示
 					 * 
 					 * 但是如果在样式中写了!important，则此时样式会有最高的优先级，
@@ -60,8 +60,8 @@
 					/*
 					 * 	语法：元素.style.样式名
 					 * 
-					 * 通过style属性设置和读取的都是内联样式
-					 * 	无法读取样式表中的样式
+					 * 【【【通过style属性设置和读取的都是内联样式
+					 * 		无法读取样式表中的样式】】】
 					 */
 					//alert(box1.style.height);
 					alert(box1.style.width);
