--- a/JSBasic/源码/day16/source/day16/03.事件的传播.html
+++ b/JSBasic/源码/day16/source/day16/03.事件的传播.html
@@ -45,7 +45,7 @@
 				 * 		然后在向内传播给后代元素
 				 * 	- W3C综合了两个公司的方案，将事件传播分成了三个阶段
 				 * 		1.捕获阶段
-				 * 			- 在捕获阶段时从最外层的祖先元素，向目标元素进行事件的捕获，但是默认此时不会触发事件
+				 * 			- 在捕获阶段时从最外层（document/window）的祖先元素，向目标元素进行事件的捕获，但是默认此时不会触发事件
 				 * 		2.目标阶段
 				 * 			- 事件捕获到目标元素，捕获结束开始在目标元素上触发事件
 				 * 		3.冒泡阶段
