--- a/JSBasic/源码/day17/source/day17/01.BOM.html
+++ b/JSBasic/源码/day17/source/day17/01.BOM.html
@@ -30,9 +30,9 @@
 			 * 		
 			 */
 			
-			//console.log(navigator);
-			//console.log(location);
-			//console.log(history);
+			console.log(navigator);   //window.navigator也可以
+			console.log(location);
+			console.log(history);
 			
 			/*
 			 * Navigator
