--- a/JSBasic/源码/day18/source/day18/04.JSON.html
+++ b/JSBasic/源码/day18/source/day18/04.JSON.html
@@ -23,7 +23,7 @@
 			 * 			1.对象 {}
 			 * 			2.数组 []
 			 * 
-			 * 		JSON中允许的值：
+			 * 		JSON中允许的值：（函数不行）
 			 * 			1.字符串
 			 * 			2.数值
 			 * 			3.布尔值
