--- a/JSBasic/源码/day05/day05/06.HelloWorld.html
+++ b/JSBasic/源码/day05/day05/06.HelloWorld.html
@@ -13,7 +13,7 @@
 			
 			/*
 			 * 让计算机在页面中输出一个内容
-			 * document.write()可以向body中输出一个内容
+			 * document.write()可以向body中输出一个内容 <body>xxxx</body>
 			 * document.write("看我出不出来~~~");
 			 */
 			
