--- a/JSBasic/源码/day06/source/day06/02.Number.html
+++ b/JSBasic/源码/day06/source/day06/02.Number.html
@@ -59,7 +59,7 @@
 			 * 如果使用JS进行浮点运算，可能得到一个不精确的结果
 			 * 	所以千万不要使用JS进行对精确度要求比较高的运算	
 			 */
-			var c = 0.1 + 0.2;
+			var c = 0.1 + 0.2;   //0.30000000004
 			
 			console.log(c);
 			
