--- a/JSBasic/源码/day06/source/day06/03.Boolean.html
+++ b/JSBasic/源码/day06/source/day06/03.Boolean.html
@@ -18,7 +18,7 @@
 			
 			var bool = false;
 			
-			console.log(typeof bool);
+			console.log(typeof bool);  //boolean
 			console.log(bool);
 			
 			
