--- a/JSBasic/源码/day09/source/day09/07.属性名和属性值.html
+++ b/JSBasic/源码/day09/source/day09/07.属性名和属性值.html
@@ -20,7 +20,7 @@
 			//obj.var = "hello";  don't operation like this
 			
 			/*
-			 * 如果要使用特殊的属性名，不能采用.的方式来操作
+			 * 如果要使用特殊的属性名，不能采用.的方式来操作（obj.123 = 789 不可直接点）
 			 * 	需要使用另一种方式：
 			 * 		语法：对象["属性名"] = 属性值
 			 * 	读取时也需要采用这种方式
