--- a/JSBasic/源码/day09/source/day09/08.基本和引用数据类型.html
+++ b/JSBasic/源码/day09/source/day09/08.基本和引用数据类型.html
@@ -7,7 +7,7 @@
 			
 	//基本数据类型保存的是值(栈中直接存储)，引用数据类型保存的是地址(堆中开辟空间)
 
-			/*
+			/* 
 			 * 基本数据类型
 			 * 	String Number Boolean Null Undefined
 			 * 
@@ -22,6 +22,10 @@
 			 * 		而变量保存的是对象的内存地址（对象的引用），如果两个变量保存的是同一个对象引用，
 			 * 		当一个通过一个变量修改属性时，另一个也会受到影响
 			 		从栈通过指针指向堆，指针不改，堆中改全改
+
+
+					 基本数据类型  保存的就是值  栈内存储
+					 引用数据类型  在栈内  保存的是引用 地址 指针    指向 堆   堆内放值
 			 */
 			
 			var a = 123;
@@ -44,7 +48,7 @@
 			/*console.log(obj.name);
 			console.log(obj2.name);*/
 			
-			//设置obj2为null   不影响obj   只是断开了指针
+			//  var obj2 = obj;  设置obj2为null   不影响obj   只是断开了指针
 			obj2 = null;
 			
 			/*console.log(obj);
