--- a/JSBasic/源码/day10/source/day10/08.变量的声明提前.html
+++ b/JSBasic/源码/day10/source/day10/08.变量的声明提前.html
@@ -18,7 +18,8 @@
 			 */
 			/*console.log("a = "+a);
 			
-			var a = 123;*/
+			 var a = 123;*/      
+			//  声明提前 没赋值
 			
 			//fun();
 			//fun2();  会报错
