--- a/JSBasic/源码/day11/source/day11/02.构造函数.html
+++ b/JSBasic/源码/day11/source/day11/02.构造函数.html
@@ -16,7 +16,7 @@
 			 * 			这是完全没有必要，完全可以使所有的对象共享同一个方法
 			 */
 			function Person(name , age , gender){
-				this.name = name;
+				this.name = name;    //把name添加到新建的对象中
 				this.age = age;
 				this.gender = gender;
 				//向对象中添加一个方法
