--- a/JSBasic/源码/day12/source/day12/03.arguments.html
+++ b/JSBasic/源码/day12/source/day12/03.arguments.html
@@ -11,7 +11,7 @@
 			 * 		- arguments是一个类数组对象,它也可以通过索引来操作数据，也可以获取长度
 			 * 		- 在调用函数时，我们所传递的实参都会在arguments中保存
 			 * 		- arguments.length可以用来获取实参的长度
-			 * 		- 我们即使不定义形参，也可以通过arguments来使用实参，
+			 * 		- 我们即使[[[不定义]]]形参，也可以通过arguments来使用实参，
 			 * 			只不过比较麻烦
 			 * 			arguments[0] 表示第一个实参
 			 * 			arguments[1] 表示第二个实参 。。。
