--- a/JSBasic/源码/day13/source/day13/02.正则表达式.html
+++ b/JSBasic/源码/day13/source/day13/02.正则表达式.html
@@ -8,11 +8,13 @@
 			/*
 			 * 创建一个正则表达式检查一个字符串中是否含有aaa
 			 */
+
+			//  var reg = /aaa/;
 			
 			/*
 			 * 量词
 			 * 	- 通过量词可以设置一个内容出现的次数
-			 * 	- 量词只对它前边的一个内容起作用
+			 * 	- 量词只对它前边的一个内容起作用 （注意加括号）
 			 * 	- {n} 正好出现n次
 			 * 	- {m,n} 出现m-n次
 			 * 	- {m,} m次以上
@@ -22,7 +24,7 @@
 			 */
 			var reg = /a{3}/;
 			//ababab
-			reg = /(ab){3}/;
+			reg = /(ab){3}/;   
 			
 			reg = /b{3}/;
 			
@@ -54,6 +56,8 @@
 			 */
 			reg = /^a$/;
 			
+			// /^a|a$/  以a开头或者以a结尾
+
 			//console.log(reg.test("bbca"));
 			
 			/*
@@ -66,7 +70,7 @@
 			 *  2. 第二位3-9任意数字
 			 * 	3. 三位以后任意数字9个
 			 * 
-			 *  ^1   [3-9]  [0-9]{9}$  
+			 *  ^1   [3-9]  [0-9]{9}$      0-9的9位 之后不能有其他 $
 			 * 
 			 */
 			
