--- a/JSBasic/源码/day13/source/day13/03.正则表达式.html
+++ b/JSBasic/源码/day13/source/day13/03.正则表达式.html
@@ -20,7 +20,7 @@
 			reg = /\\/;
 			
 			reg = new RegExp("\\.");
-			reg = new RegExp("\\\\");
+			reg = new RegExp("\\\\");   //本身就是字符串 需要多加一个斜杠
 			
 			/*
 			 * \w
@@ -69,7 +69,7 @@
 			
 			//str = str.replace(/\s/g , "");
 			
-			//去除开头的空格
+			//去除开头的空格  开头0个或多个空格=> *
 			//str = str.replace(/^\s*/, "");
 			//去除结尾的空格
 			//str = str.replace(/\s*$/, "");
