--- a/JSAdvance/JSAdvance/work/01_基础总结深入/02_数据_变量_内存5.html
+++ b/JSAdvance/JSAdvance/work/01_基础总结深入/02_数据_变量_内存5.html
@@ -24,7 +24,7 @@
     var b = {}
   }
 
-  fn() // b是自动释放, b所指向的对象是在后面的某个时刻由垃圾回收器回收
+  fn() // 执行完fn之后，b的空间是自动释放, b所指向的对象是在后面的某个时刻由垃圾回收器回收
 </script>
 </body>
 </html>
