--- a/JSAdvance/JSAdvance/work/补充/01_分号问题.html
+++ b/JSAdvance/JSAdvance/work/补充/01_分号问题.html
@@ -10,11 +10,9 @@
 1. js一条语句的后面可以不加分号
 2. 是否加分号是编码风格问题, 没有应该不应该，只有你自己喜欢不喜欢
 3. 在下面2种情况下不加分号会有问题
-  * 小括号开头的前一条语句
-  * 中方括号开头的前一条语句
+  * 小括号开头的前一条语句（匿名函数自调用）
+  * 中方括号开头的前一条语句（数组循环）
 4. 解决办法: 在行首加分号
-5. 强有力的例子: vue.js库
-6. 知乎热议: https://www.zhihu.com/question/20298345
 -->
 <script type="text/javascript">
   var a = 3
