execute context stack

--- a/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/01_变量提升与函数提升.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/01_变量提升与函数提升.html
@@ -19,6 +19,7 @@
   /*
   面试题 : 输出 undefined
    */
+  //  var a  console.log(a)  a=4
   var a = 3
   function fn () {
     console.log(a)
@@ -26,7 +27,7 @@
   }
   fn()
 
-  console.log(b) //undefined  变量提升
+  console.log(b) //undefined  变量提升  b的定义提前 值为undefined
   fn2() //可调用  函数提升
   // fn3() //不能  变量提升
 
