--- a/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/02_执行上下文.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/02_执行上下文.html
@@ -37,6 +37,23 @@
   }
   console.log(a1)
 
+  // 函数执行上下文
+
+  function fn(a1){
+    console.log(a1)
+    console.log(a2)
+    a3()
+    console.log(this)
+    console.log(argument)  //伪数组
+
+    var a2 = 3
+    function a3() {
+      console.log('a3()')
+    }
+  }
+  fn(2, 3)
+
+
 </script>
 </body>
 </html>
