--- a/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/03_执行上下文栈.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/03_执行上下文栈.html
@@ -11,6 +11,10 @@
 3. 在函数执行上下文创建后, 将其添加到栈中(压栈)
 4. 在当前函数执行完后,将栈顶的对象移除(出栈)
 5. 当所有的代码执行完后, 栈中只剩下window
+
+调用函数的次数 + window
+
+全局执行上下文在最下面   函数执行上下文   栈调用 执行完出栈（移除）
 -->
 <script type="text/javascript">
   var a = 10
