--- a/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/05_面试题.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/02_执行上下文与执行上下文栈/05_面试题.html
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-<div style=""></div>
+<div></div>
 <script type="text/javascript">
 
   /*
@@ -36,7 +36,7 @@
     console.log(c)
     var c = 3
   }
-  c(2) // 报错
+  c(2) // 报错 Uncaught TypeError: c is not a function
 
 </script>
 </body>
