--- a/JSAdvance/JSAdvance/work/02_函数高级/03_作用域与作用域链/01_作用域.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/03_作用域与作用域链/01_作用域.html
@@ -8,7 +8,7 @@
 <!--
 1. 理解
   * 就是一块"地盘", 一个代码段所在的区域
-  * 它是静态的(相对于上下文对象), 在编写代码时就确定了
+  * 它是静态的(相对于上下文对象(函数执行调用时产生)), 在编写代码时就确定了
 2. 分类
   * 全局作用域
   * 函数作用域
