--- a/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/04_闭包的生命周期.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/04_闭包的生命周期.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!--
-1. 产生: 在嵌套内部函数定义执行完时就产生了(不是在调用)
+1. 产生: 在嵌套内部函数定义执行（只是创建了函数对象）完时就产生了(不是在调用)
 2. 死亡: 在嵌套的内部函数成为垃圾对象时
 -->
 <script type="text/javascript">
