--- a/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/06_闭包的缺点及解决.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/06_闭包的缺点及解决.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <!--
+
+  闭包延长了局部变量的生命周期
+
 1. 缺点
   * 函数执行完后, 函数内的局部变量没有释放, 占用内存时间会变长
   * 容易造成内存泄露
@@ -21,7 +24,7 @@
     }
     return fn2
   }
-  var f = fn1()
+  var f = fn1()   //var f = 在 闭包就不被释放
   f()
 
   f = null //让内部函数成为垃圾对象-->回收闭包
