--- a/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/06_闭包的缺点及解决.html
+++ b/JSAdvance/JSAdvance/work/02_函数高级/04_闭包/06_闭包的缺点及解决.html
@@ -18,7 +18,7 @@
 -->
 <script type="text/javascript">
   function fn1() {
-    var arr = new Array[100000]
+    var arr = new Array(100000)
     function fn2() {
       console.log(arr.length)
     }
